# French-CERFA-donation-filler

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
accounts/: admin.py  backends.py  forms.py  index.html  models.py  urls.py  views.py
accounts/locale/en/LC_MESSAGES/: django.po
accounts/locale/fr/LC_MESSAGES/: django.mo  django.po
accounts/migrations/: 0001_initial.py  0002_alter_customuser_managers.py
accounts/templates/: delete_account.html  login_page.html  profile.html
cerfa_filler/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
cerfa_filler/fixtures/: declarative_structures.json  group.json  legal_forms.json
cerfa_filler/locale/en/LC_MESSAGES/: django.mo  django.po
cerfa_filler/locale/fr/LC_MESSAGES/: django.mo  django.po
cerfa_filler/migrations/: 0001_initial.py  0002_companies_order_alter_companies_cash_payment_type_and_more.py  0002_remove_companies_valid_companies_valid_date_and_more.py  0003_alter_companies_end_date_alter_companies_uuid.py  0003_alter_companylegalforms_options_and_more.py  0004_alter_companies_options_and_more.py  0004_alter_companies_options_remove_companies_end_date_and_more.py  0005_alter_beneficiaryorganization_uuid_and_more.py  0005_companies_email_alter_companies_uuid.py  0006_alter_companies_options.py  0006_beneficiaryorganization_alter_companies_uuid.py  0007_beneficiaryorganization_additional_address_and_more.py  0007_declarativestructure_companies_cheque_deposit_date_and_more.py  0008_alter_declarativestructure_options_and_more.py  0009_remove_beneficiaryorganization_email_and_more.py  0010_alter_beneficiaryorganization_emails_and_more.py  0011_beneficiaryorganization_comment_and_more.py  0012_privateindividual.py  0013_privateindividual_donation_nature_and_more.py  0014_alter_beneficiaryorganization_options_and_more.py  0015_companies_tax_receipt_privateindividual_tax_receipt.py  0016_remove_companies_cheque_deposit_date_and_more.py  0017_alter_companies_declarative_structure_and_more.py
cerfa_filler/static/: bootstrap.min.css
cerfa_filler/templates/: base.html  company_form.html  company_list.html  home.html  private_individual_form.html  private_individual_list.html
cerfa_filler/tests/: test_models.py  test_views.py
locale/fr/LC_MESSAGES/: django.po
settings/: settings.py  urls.py
templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_form copy.html
