[project]
name = "cerfafiller"
version = "0.1.0"
description = "Django app to fill CERFA forms"
authors = [
    {name = "lpofredc",email = "frederic.cloitre@lpo.fr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "pypdf (>=5.8.0,<6.0.0)",
    "num2words (>=0.5.14,<0.6.0)",
    "weasyprint (>=66.0,<67.0)",
    "django-bootstrap5 (>=25.1,<26.0)",
    "django-import-export (>=4.3.9,<5.0.0)",
    "tablib[xlsx] (>=3.8.0,<4.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "dj-database-url (>=3.0.1,<4.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "django-multi-email-field (>=0.8.0,<0.9.0)"
]



[tool.isort]
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
include = '\.pyi?$'
line-length = 79
target-version = ['py38']

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"
